create prototype of cameralist

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   fast_cached_network_image: ^1.2.6
   device_info_plus: ^9.1.2
   permission_handler: ^11.3.0
+  path_provider: ^2.1.2
+  intl: ^0.19.0
+  
 
 dev_dependencies:
   flutter_test:
