--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   sony_camera_api:
     git:
       url: https://github.com/kirlo-s/sony-camera-api-dart
-      ref: 0.2g
+      ref: 0.3a
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -45,6 +45,8 @@ dependencies:
   permission_handler: ^11.3.0
   path_provider: ^2.1.2
   intl: ^0.19.0
+  dio: ^5.4.1
+  simple_http_api: ^1.1.1
   
 
 dev_dependencies:
