--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   intl: ^0.19.0
   dio: ^5.4.1
   simple_http_api: ^1.1.1
-  
+  external_path: ^1.0.3
 
 dev_dependencies:
   flutter_test:
