--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   simple_http_api: ^1.1.1
   external_path: ^1.0.3
   media_store_plus: ^0.0.7
+  dynamic_color: ^1.7.0
 
 dev_dependencies:
   flutter_test:
